Fix misalignment of icons in buttons (cosmetic)

--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ button.icon {
   width: 30px;
   height: 30px;
   margin: 1px;
+  padding: 0;
 }
 
 button.icon:hover {
